<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>com.shoppoc</groupId>
    <artifactId>shoppoc-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>shopPoc</name>

    <properties>
        <java.version>11</java.version>
    </properties>

    <modules>
        <module>shoppoc-shared</module>
        <module>shoppoc-user</module>
        <module>shoppoc-catalog</module>
        <module>shoppoc-payment</module>
        <module>shoppoc-order</module>
        <module>shoppoc-app</module>
    </modules>

</project>
